manifests/webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: governance-webhook
webhooks:
  - name: governance-webhook.default.svc
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Ignore
    clientConfig:
      service:
        name: governance-webhook
        namespace: default
        path: /validate
        port: 443
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZqakNDQTNhZ0F3SUJBZ0lVRXN0QUEvK2MyRjd5UGhVT2hnWW1LTEY0c1Y4d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0tURW5NQ1VHQTFVRUF3d2VaMjkyWlhKdVlXNWpaUzEzWldKb2IyOXJMbVJsWm1GMWJIUXVjM1pqTUI0WApEVEkyTURZeE9ERXdOVGMwTUZvWERUSTNNRFl4T0RFd05UYzBNRm93S1RFbk1DVUdBMVVFQXd3ZVoyOTJaWEp1CllXNWpaUzEzWldKb2IyOXJMbVJsWm1GMWJIUXVjM1pqTUlJQ0lqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FnOEEKTUlJQ0NnS0NBZ0VBMm1CWlFqaU1qY0hhUGJVUVRCcE51YzdzYTNIOTQzN0t0ZVB6cStKWDg4Z1hrQlVMY1NKaAppeWx0VDlVcDNr [...]
    rules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments"]
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["namespaces"]
